# TAAL

./: build.gradle.kts  devlog.md  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/src/androidMain/jni/: CMakeLists.txt  miniaudio_wrapper.c
composeApp/src/commonMain/kotlin/org/example/project/: App.kt  Beat.kt  BeatEditorScreen.kt  PianoRollEditor.kt  TileViewModel.kt
composeApp/src/jvmMain/kotlin/org/example/project/: AudioPlayer.kt
gradle/: libs.versions.toml
